--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.5.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "~0.13.12",
-    "react-native-gesture-handler": "~1.10.2"
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
