--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.5.0",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "12.1.1",
     "react-native-svg-uri": "^1.2.3",
     "react-native-web": "~0.13.12",
-    "react-native-svg": "12.1.1"
+    "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
